[gd_scene load_steps=9 format=3 uid="uid://bs5eux3pneboo"]

[ext_resource type="Script" path="res://possible_exam_spawn.gd" id="1_ksk3v"]
[ext_resource type="Script" path="res://exam.gd" id="2_83smv"]
[ext_resource type="Script" path="res://exams.gd" id="3_s7dlg"]
[ext_resource type="PackedScene" path="res://loading_bar.tscn" id="4_7sl4f"]

[sub_resource type="Resource" id="Resource_q1l7x"]
script = ExtResource("2_83smv")
exam_name = "Math"
exam_award = 100
exam_time = 25.0
exam_max_mark = 10
max_questions = 8
min_questions = 4
error_lose_mark = 15
duration = 45.0
preferable_spawn = 0
possible_spawns = Array[int]([1, 2])
excluded_spwans = Array[int]([])
max_wait_time = 4.0
min_wait_time = 2.0

[sub_resource type="Resource" id="Resource_spys5"]
script = ExtResource("2_83smv")
exam_name = "WEIRDO"
exam_award = 0
exam_time = 0.0
exam_max_mark = 0
max_questions = 0
min_questions = 0
error_lose_mark = 0
duration = 0.0
preferable_spawn = 0
possible_spawns = Array[int]([])
excluded_spwans = Array[int]([])
max_wait_time = 4.0
min_wait_time = 2.0

[sub_resource type="Resource" id="Resource_pkvmj"]
script = ExtResource("3_s7dlg")
max_possible_exams = 5
all_possible_exams = Array[ExtResource("2_83smv")]([SubResource("Resource_q1l7x"), SubResource("Resource_spys5")])

[sub_resource type="BoxShape3D" id="BoxShape3D_2tbwc"]

[node name="PossibleExamSpawn" type="Node3D"]
script = ExtResource("1_ksk3v")
exams = SubResource("Resource_pkvmj")

[node name="Label3D" type="Label3D" parent="."]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_2tbwc")

[node name="ExamQueue" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WaitingForNewExam" type="Timer" parent="."]

[node name="LoadingBar" parent="." instance=ExtResource("4_7sl4f")]
transform = Transform3D(0.1, 0, 0, 0, 0.13516, 0, 0, 0, 0.1, 0.0119779, 0, -0.0639589)

[node name="OmniLight3D" type="OmniLight3D" parent="LoadingBar"]
transform = Transform3D(10, 0, 0, 0, 3.7594, 0, 0, 0, 10, 0, 0, 0)
light_color = Color(0.992157, 0.952941, 0.941176, 1)

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
[connection signal="timeout" from="ExamQueue" to="." method="_on_exam_queue_timeout"]
[connection signal="timeout" from="WaitingForNewExam" to="." method="_on_waiting_for_new_exam_timeout"]
